src/objects/Open311ApiKeyConfig__c.object
<CustomObject>
    <fields>
        <fullName>ApiKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Api Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Available_SR_Types_For_GET__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <description>The Service Request Types that the specified API key is able to query.</description>
        <label>Available SR Types For GET</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Available_SR_Types_For_POST__c</fullName>
        <label>Available SR Types For POST</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Available_SR_Types_For_PUT__c</fullName>
        <label>Available SR Types For PUT</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Request_Date__c</fullName>
        <description>The last date and time a request was made using this key to the api.</description>
        <label>Last Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Reset__c</fullName>
        <label>Last Reset</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lock_Activities__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Lock Activities to be returned through GET Service calls for Private API users</inlineHelpText>
        <label>Lock Activities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lock_FlexNotes__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Lock Flexnotes to be returned through GET Service calls for Private API users</inlineHelpText>
        <label>Lock FlexNotes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Private__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to indicate a Class 2 or Integration Partner status (Cityworks, Trakster, etc) and access level.  Public Open311 submission only (POST) access is granted when unchecked.</description>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Usage_Limit_Allocation__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total number of requests allocated to the API Key used.</description>
        <label>30 Day Usage Limit Allocation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Usage_Limit_Reset_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>The date the the usage limit will be reset.</description>
        <inlineHelpText>Set this to the date you wish to have the api key&apos;s usage be reset. The application will automatically register the next iteration 30 days from the date specified when a call is made on the reset date.</inlineHelpText>
        <label>Last Reset Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Usage_Limit_Used__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Amount of usage limit that has been used already.</description>
        <label>30 Day Usage Limit Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isCommentsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will describe if comments are required when a Status of a service request has changed.</description>
        <inlineHelpText>Enable this field if you wish to force case closure comments when setting a cases status.</inlineHelpText>
        <label>Are Comments Required for Status Changes</label>
        <type>Checkbox</type>
    </fields>
    <label>Open 311 Api Key Config</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ApiKey__c</columns>
        <columns>Usage_Limit_Used__c</columns>
        <columns>Usage_Limit_Allocation__c</columns>
        <columns>Private__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Agency</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Open 311 Api Key Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>